fix jumpy outline navigation

--- a/client/editor/editor.scss
+++ b/client/editor/editor.scss
@@ -284,6 +284,7 @@
 
    .terminalBtn,
    .terminal { display: none; }
+   .Outline { display: none; }
   }
   @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
     $content-padding: 0 64px;
